--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catalog Website</title>
-    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="catalog">
-        <div class="items" id="items-container"></div>
-    </div>
+    <h1>Catalog</h1>
+    <div id="catalog"></div>
+    
     <script src="script.js"></script>
 </body>
 </html>
